[build-system]
requires = [
    "scikit-build>=0.12",
    "setuptools>=42",
    "setuptools_scm>=5",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp312-musllinux* cp311-macosx_universal2"
build-verbosity = 3
test-extras = "test"
test-command = "pytest {project}/tests"
musllinux-x86_64-image = "patchelf_build_x86_64"
musllinux-i686-image = "patchelf_build_i686"
musllinux-aarch64-image = "patchelf_build_aarch64"
musllinux-ppc64le-image = "patchelf_build_ppc64le"
musllinux-s390x-image = "patchelf_build_s390x"
musllinux-armv7l-image = "patchelf_build_armv7l"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
repair-wheel-command = "cp {wheel} {dest_dir}/"

[tool.cibuildwheel.linux.environment]
CXXFLAGS = "-D_FORTIFY_SOURCE=2 -fstack-protector-strong -Wformat -Werror=format-security -O2 -static"
SKBUILD_CONFIGURE_OPTIONS = "-DRUN_PATCHELF_TEST:BOOL=ON"

[tool.cibuildwheel.macos.environment]
CXXFLAGS = "-arch arm64 -arch x86_64 -O2"
